:bug:  fix(contribution to Performance Indicators) : Adjustments to misaligned texts
Made an adjustment to misaligned texts on the contribution to Performance Indicators page

--- a/marlo-web/src/main/webapp/crp/css/projects/projectContributionCrp.css
+++ b/marlo-web/src/main/webapp/crp/css/projects/projectContributionCrp.css
@@ -129,3 +129,7 @@ a.downloadBaseline {
     display: block !important;
     margin-right: 5px;
 }
+
+.text {
+    display: flex;
+}
